--- a/web.html
+++ b/web.html
@@ -17,15 +17,19 @@
 <body>
     <div class="caixa-maior">
         <input class="input-cidade" placeholder="Digite o Nome da Cidade">
-         
-        <button onclick=cliqueNoBotao(event)>
+
+        <button onclick=cliqueNoBotao()>
             <img class="lupa"
                 src="https://a-static.mlcdn.com.br/800x560/lupa-lente-aumento-zoom-de-mao-75mm-lente-de-vidro-corpo-em-plastico-para-leituras-ampliacao-ate-5x-negocio-de-genio/negociodegenio/12963306945/405e093febe4f414b0fdb2ea8f3d0758.jpg">
         </button>
         <div class="caixa-media">
             <h2 class="cidade">Tempo em Rio de Janeiro</h2>
             <p class="temp">28ºc</p>
-            <p class="descricao">Nuvens Dispersas</p>
+            <div class="caixa-nuvem">
+                <img class="nuvem"
+                    src="https://openweathermap.org/img/wn/04n.png" >
+                <p class="descricao">Nuvens Dispersas</p>
+            </div>
             <p class="umid">Umidade: 70%</p>
         </div>
     </div>
